--- a/PracticodeJs.html
+++ b/PracticodeJs.html
@@ -12,7 +12,7 @@
         <p>primer taller del curso practido de JavaScript</p>
     </header>    
     <section>
-        <h2>Calcula el perimetro y el area</h2>
+        <h2>Calcula el perimetro y el area de distintos tipos de Figuras Geometricas</h2>
         <form>
             <h3>Triangulo</h3>
             <p>Ingresa la medida en cm</p>
@@ -26,6 +26,25 @@
             <button type="button" onclick="P_triangulo()">Calcular Perimetro</button>
         </form>
     </section>
+    <section>
+        <form>
+            <h3>Cuadrado</h3>
+            <p>Ingresa la medida en cm</p>
+            <label>Lado</label>
+            <input type="number" id="lado">
+            <button type="button" onclick="areaCuadrado()">Calcular Area</button>
+        </form>
+    </section>
+    <section>
+        <form>
+            <h3>Circulo</h3>
+            <p>Ingresa la medida en cm</p>
+            <label>radio</label>
+            <input type="number" id="radio">
+            <button type="button" onclick="areaCirculo()">Calcular Area</button>
+        </form>
+    </section>
+    <p id="cuadrado"></p>
     <script src="./PracticodeJS.js"></script>
 </body>
 </html>
